k8s/layered/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geostore-deployment
  namespace: geostore-simple
  labels:
    app: geostore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geostore
  template:
    metadata:
      labels:
        app: geostore
    spec:
      containers:
      - name: geostore
        image: clarkezone/geostore:main
        ports:
        - containerPort: 5000
