k8s/layered/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geostore-ingress
  namespace: geostore-simple
spec:
  defaultBackend:
    service:
      name: geostore-service
      port:
        name: http 
  ingressClassName: tailscale
  tls:
  - hosts:
    - geostore-placeholder
